--- a/CapstoneProject.ipynb
+++ b/CapstoneProject.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "nbpresent": {
@@ -11,14 +12,31 @@
     }
    },
    "source": [
-    "# Supervised Learning Capstone Presentation\n",
+    "# Exploring US Wages Across Occupations\n",
     "\n",
-    "## Exploring Wage Disparities Across Occupations\n",
     "\n",
-    "In this notebook I will be exploring the Kaggle dataset of the US Bureau of Labor Statistics January 2015 report on income by gender and occupation. The dataset's metadata states that it shows 535 different occupations, and their corresponding weekly median incomes, broken down into men, women, and all, columns. Also included are reported numbers of emplyees for each occupation.\n",
+    "## Supervised Learning Capstone Presentation\n",
     "\n",
-    "With this data, I would like to see if I can predict the occupational category of a job given input on wage, gender, share of females, gender ratio, wage gap, and if the field is male dominated or has a significant wage gap. \n",
+    "\n",
+    "<img src=\"people-in-uniform-doing-different-occupations_1308-1835.jpg\">\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## \n",
+    "In this notebook I explore the Kaggle dataset from the US Bureau of Labor Statistics January 2015 report on occupation income by gender. Today, we are exploring a dataset from Kaggle.com. It is a bureau of labor statistics report showing occupations and their weekly median wages for men, women, and combined. It also show number of employees for each occupation and breaks that number down into men and women, and combined as well. \n",
+    "\n",
+    "## A machine learning question\n",
+    "The question I want to attempt to answer is “Can we predict the Occupation Category using wage, gender, share of females in the field, and if that field is male dominated or has a significant wage gap?” I'm exploring to see if there is some substructure to the occupation labels.\n",
+    "(third slide)(click down)\n"
    ]
   },
   {
@@ -72,20 +90,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "nbpresent": {
-     "id": "d3b0666d-4757-4c99-a970-16c871943af9"
-    },
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "Taking our first look at our data, it looks like the occupation categories are all upper case. There are also a few columns of objects that have numerical values in them. We'll change those over, coercing them to have nan values which we can later drop."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 95,
    "metadata": {
@@ -94,7 +98,7 @@
     },
     "scrolled": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "skip"
     }
    },
    "outputs": [
@@ -485,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 254,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
@@ -503,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 255,
    "metadata": {
     "nbpresent": {
      "id": "87e7f653-08e9-4993-abbc-b8a7eb930e26"
@@ -539,7 +543,7 @@
        "Name: Occupation_Category_label, dtype: int64"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,14 +565,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 256,
    "metadata": {
     "collapsed": true,
     "nbpresent": {
      "id": "b498a602-2175-4c7b-836b-24a23a81c1a4"
     },
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -578,7 +582,6 @@
     "cleanedgenderwage.loc[cleanedgenderwage['Occupation_Category_label'] == 'HEALTHCARE PROFESSIONAL', 'Occupation_Category_label'] = 'HEALTHCARE'\n",
     "\n",
     "cleanedgenderwage.loc[cleanedgenderwage['Occupation_Category_label'] == 'AGRICULTURAL', 'Occupation_Category_label'] = 'INFRASTRUCTURE SUPPORT'\n",
-    "cleanedgenderwage.loc[cleanedgenderwage['Occupation_Category_label'] == 'CONSTRUCTION', 'Occupation_Category_label'] = 'INFRASTRUCTURE SUPPORT'\n",
     "cleanedgenderwage.loc[cleanedgenderwage['Occupation_Category_label'] == 'MAINTENANCE', 'Occupation_Category_label'] = 'INFRASTRUCTURE SUPPORT'\n",
     "cleanedgenderwage.loc[cleanedgenderwage['Occupation_Category_label'] == 'GROUNDSKEEPING', 'Occupation_Category_label'] = 'INFRASTRUCTURE SUPPORT'\n",
     "cleanedgenderwage.loc[cleanedgenderwage['Occupation_Category_label'] == 'TRANSPORTATION', 'Occupation_Category_label'] = 'INFRASTRUCTURE SUPPORT'\n",
@@ -595,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 257,
    "metadata": {
     "nbpresent": {
      "id": "7174bd3d-3189-41cf-9e5b-f45a053b01c5"
@@ -622,7 +625,7 @@
        "Name: Occupation_Category_label, dtype: int64"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,6 +733,7 @@
     }
    ],
    "source": [
+    "# possibly drop this slide\n",
     "# look at female wages vs male wages on a scatter plot\n",
     "plt.plot(cleanedgenderwage['All_weekly'], cleanedgenderwage['F_weekly'], 'o', color='m')\n",
     "plt.plot(cleanedgenderwage['All_weekly'], cleanedgenderwage['M_weekly'], 'o', color='c')\n",
@@ -826,7 +830,9 @@
    "outputs": [],
    "source": [
     "cleanedgenderwage['WageGap_as_Ratio'] = cleanedgenderwage['F_weekly'] / cleanedgenderwage['M_weekly']\n",
-    "cleanedgenderwage['F_share'] = cleanedgenderwage['F_workers'] / cleanedgenderwage['All_workers']\n"
+    "cleanedgenderwage['Significant_wage_gap'] = np.where(cleanedgenderwage['WageGap_as_Ratio'] > .85, 0, 1)\n",
+    "cleanedgenderwage['F_share'] = cleanedgenderwage['F_workers'] / cleanedgenderwage['All_workers']\n",
+    "cleanedgenderwage['Male_Dominated'] = np.where(cleanedgenderwage['F_share'] > .45, 0, 1)\n"
    ]
   },
   {
@@ -847,23 +853,6 @@
     "## I also made a column marking occupations with significant wage gaps\n",
     "\n",
     "For our purposes, a significant wage gap is a difference of 15% or more over women."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {
-    "nbpresent": {
-     "id": "1333f130-100d-48fb-a430-c42ef508540f"
-    },
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "cleanedgenderwage['Male_Dominated'] = np.where(cleanedgenderwage['F_share'] > .45, 0, 1)\n",
-    "cleanedgenderwage['Significant_wage_gap'] = np.where(cleanedgenderwage['WageGap_as_Ratio'] > .85, 0, 1)"
    ]
   },
   {
@@ -972,21 +961,11 @@
     "plt.figure(figsize=((10,30)))\n",
     "sns.barplot(x='WageGap_as_Ratio',\n",
     "            y='Occupation',\n",
-    "            data=cleanedgenderwage.sort_values('WageGap_as_Ratio', ascending=False))\n",
+    "            data=cleanedgenderwage.sort_values('WageGap_as_Ratio',\n",
+    "                                               ascending=False))\n",
     "plt.axvline(x=1, color='black', linestyle='solid')\n",
     "plt.title('Wage Ratio by Occupation')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Lets look at a bigger scatter plot of m/f incomes, and color it according to occupation"
    ]
   },
   {
@@ -1004,21 +983,14 @@
     "\n",
     "The questions I will be looking to answer today is:\n",
     "     - Can we predict the occupational category given wage, gender, share of females for that field, if that field is male dominated or not, and if that field has a significant wage gap? \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "nbpresent": {
-     "id": "e861e6f4-7193-4e03-b797-1ab25fe92e62"
-    },
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "source": [
-    "I want to try several different classifiers so I'll make a quick function that will allow me to choose the model to test, the data, and then will return me an accuracy score. "
+    "\n",
+    "The question I'm asking is a classification question, so I tested:\n",
+    "    * Logistic Regression Classifier  (A Classic first step classifier)\n",
+    "    * Decision Tree Classifier (a different kind of classifier than a regression)\n",
+    "    * Random Forest Classifier (multiple decision trees together as a classifier)\n",
+    "    * Extra Trees Ensemble Classifier (more trees might be better)\n",
+    "    * Support Vector Classifier (a third kind of classifier)\n",
+    "    * Gradient Boosting Classifier (a  fourth kind of classifier)\n"
    ]
   },
   {
@@ -1075,7 +1047,7 @@
     "           'WageGap_as_Ratio',\n",
     "           'F_share']\n",
     "\n",
-    "# split up data first, then resample only the training data, maybe try smote again\n",
+    "# split up data first, then resample only the training data\n",
     "X = cleanedgenderwage[columns]\n",
     "\n",
     "X_std = StandardScaler().fit_transform(X)\n",
@@ -1088,13 +1060,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# make iterator to go over estimators and params"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 176,
    "metadata": {
@@ -1103,17 +1068,12 @@
      "id": "62adb034-7b62-4521-9046-50da9801621b"
     },
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "subslide"
     }
    },
    "outputs": [],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
-    "\n",
-    "#class Testing:\n",
-    "#    pass\n",
-    "#model1 = Testing()\n",
-    "#model1\n",
     "\n",
     "def check_grid(estimator, params, X, y):\n",
     "    grid_classifier = GridSearchCV(estimator=estimator, param_grid=params)\n",
@@ -1126,7 +1086,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -1145,28 +1108,37 @@
     "             'kernel': ('linear', 'poly', 'rbf', 'sigmoid'),\n",
     "             'degree': (2, 3, 4, 5),\n",
     "             'gamma': (1, 2, 3)}\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 221,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "# got my estimators\n",
+    "logr = linear_model.LogisticRegression()\n",
     "gradient = ensemble.GradientBoostingClassifier()\n",
     "extree = ensemble.ExtraTreesClassifier()\n",
     "dtree = tree.DecisionTreeClassifier()\n",
     "svc = SVC()\n",
     "forest = ensemble.RandomForestClassifier()\n",
-    "logr = linear_model.LogisticRegression()"
+    "\n",
+    "estimators = [logr,\n",
+    "              gradient,\n",
+    "              extree,\n",
+    "              dtree,\n",
+    "              svc,\n",
+    "              forest]\n",
+    "params = [log_param,\n",
+    "          gradient_param,\n",
+    "          forest_type_param,\n",
+    "          dtree_param,\n",
+    "          svc_param,\n",
+    "          forest_type_param]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
-   "metadata": {},
+   "execution_count": 258,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1186,7 +1158,7 @@
       "              min_weight_fraction_leaf=0.0, n_estimators=100,\n",
       "              presort='auto', random_state=None, subsample=1.0, verbose=0,\n",
       "              warm_start=False), None]\n",
-      "0.946969696969697\n",
+      "0.9318181818181818\n",
       "[ExtraTreesClassifier(bootstrap=False, class_weight=None, criterion='gini',\n",
       "           max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
       "           min_impurity_decrease=0.0, min_impurity_split=None,\n",
@@ -1205,7 +1177,7 @@
       "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='rbf',\n",
       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
       "  tol=0.001, verbose=False), None]\n",
-      "0.9393939393939394\n",
+      "0.9696969696969697\n",
       "[RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
@@ -1217,23 +1189,6 @@
     }
    ],
    "source": [
-    "# Iterate over the kinds of models using grid_check and then return the one that is the best\n",
-    "# somehow\n",
-    "estimators = [logr,\n",
-    "              gradient,\n",
-    "              extree,\n",
-    "              dtree,\n",
-    "              svc,\n",
-    "              forest]\n",
-    "params = [log_param,\n",
-    "          gradient_param,\n",
-    "          forest_type_param,\n",
-    "          dtree_param,\n",
-    "          svc_param,\n",
-    "          forest_type_param]\n",
-    "# use cross_val_score in the scoring of the estimators somehow\n",
-    "\n",
-    "# you can do this. somehow. anyway you want\n",
     "\n",
     "for estimator, param in list(zip(estimators, params)):\n",
     "    results = []\n",
@@ -1246,7 +1201,11 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1302,33 +1261,6 @@
     "    results.append(estimator)\n",
     "    results.append(check_grid(estimator, param, X_test, y_test))\n",
     "    print(results)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 235,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.34375    0.25806452 0.35483871 0.28      ]\n",
-      "0.2732157258064516\n"
-     ]
-    }
-   ],
-   "source": [
-    "# maybe don't need this\n",
-    "Extra_tree = ensemble.ExtraTreesClassifier(bootstrap=False, class_weight=None, criterion='gini',\n",
-    "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
-    "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
-    "            min_samples_leaf=1, min_samples_split=2,\n",
-    "            min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
-    "            oob_score=False, random_state=None, verbose=0, warm_start=False)\n",
-    "\n",
-    "print(cross_val_score(Extra_tree, X_std, y, cv=4))\n",
-    "print(np.mean(cross_val_score(Extra_tree, X_std, y, cv=4)))"
    ]
   },
   {
